--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
  		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>servlet-api</artifactId>
-			<version>3.0-alpha-1</version>
+			<version>2.5</version>
 		</dependency>
+
    
    		<dependency>
      		<groupId>junit</groupId>
